Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39143

QQuickShaderEffect's attribute/uniform parser does not support core profile

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.1
    • 5.3.0
    • Quick: SceneGraph
    • None
    • d6f71a6b47ad53bbce13db367ccb996ae2d392c8

    Description

      qt_search_for_variable() in qquickshadereffect.cpp contains code to find attribute and uniform names in a GLSL shader. It is not yet prepared to handle version >=130 that do not use the "attribute" keyword anymore.

      5.3 & 5.4 are supposed to bring the last missing pieces of core profile support in Quick 2 & Qt Quick Controls and therefore this needs to be corrected too.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes